[package]
name = "moce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.89"
toml = "0.5.8"
redis = "0.22.1"
mysql = "23.0.0"
lazy_static = "1.4.0"
captcha-rs = "0.2.6"
base64 = "0.13.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
chrono = { version = "0.4.19", features = ["serde"] }
pwhash = "1.0.0"
md5 = "0.7.0"
hex = "0.4.3"
rocket-grants = "0.5.0-rc.2"
serde_with = "2.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "2.2.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
